# api-flask-restful

./: .editorconfig  .envrc.example  .flake8  .gitignore  README.md  app.py  manage.py  pyproject.toml  requirements.txt
api/: registers.py  settings.py
api/cli/: user.py
api/controller/: user.py
api/home/: resources.py
api/model/: user.py
api/users/: cli.py  model.py  registers.py  resources.py
api/utils/: auth.py
app/main/: commands.py  settings.py
app/main/controller/: user.py
app/main/model/: user.py
app/test/: test_settings.py
main/: __init__.py  settings.py
main/cli/: user.py
main/controller/: user.py
main/model/: user.py
main/utils/: errors.py
migrations/versions/: 3200535f93ed_.py  5c47bc2f30f8_.py  f6fd0376bce4_.py
test/: test_settings.py
