[tool.poetry]
name = "api-flask-restful"
version = "0.1.0"
description = "API using Flask"
authors = ["William C. Canin <william.costa.canin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-HTTPAuth = "^4.5.0"
psycopg2 = "^2.9.1"
psycopg2-binary = "^2.9.1"
passlib = "^1.7.4"
gunicorn = "^20.1.0"
Flask-Cors = "^3.0.10"
Flask-Bcrypt = "^0.7.1"
Flask-Script = "^2.0.6"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipython = "^7.28.0"
notebook = "^6.4.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
